Adjust font. Fixes layout shift in clock because it's monospaced.

--- a/index.css
+++ b/index.css
@@ -8,3 +8,7 @@ body,
   width: 100%;
   height: 100%;
 }
+
+body {
+  font-family: 'Recursive', sans-serif;
+}
